[metadata]
name = extc
version = 0.3.0
url = https://github.com/eXhumer/pyeXTC
author = eXhumer
author_email = exhumer@exhumer.cc
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU Affero General Public License v3
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
license = AGPL-3.0-only
license_files = COPYING
description = Barebones Twitter client
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.9
zip_safe = False
packages = extc
install_requires =
    requests
    requests-toolbelt

[flake8]
max-line-length = 99
